--- a/templates/results.html
+++ b/templates/results.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <h1>>{{ .title }}</h1>
+    <h1>{{ .title }}</h1>
     <pre>{{ .output}}</pre>
     <a href="/">Go Back</a>
 </body>
